
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int pthread_t ;


 int close (int) ;
 int closer ;
 int necp_open (int ) ;
 int pthread_create (int *,int *,int ,int *) ;

int main() {
  for (int i = 0; i < 10; i++) {
    pthread_t t;
    pthread_create(&t, ((void*)0), closer, ((void*)0));
  }

  while (1) {
    int fd = necp_open(0);
    close(fd);
  }

  return 0;
}
